[clock] Fix confusion between GTime and time_t

It was causing crashes on some platforms.

http://bugzilla.gnome.org/show_bug.cgi?id=569113